# AlgorithmCodingPractise

./: README.md  requirements.txt
Coding/cpp/project1/: CMakeCache.txt  CMakeLists.txt  Makefile  MyExecutable  README.md  cmake_install.cmake
Coding/cpp/project1/cmake/: CustomScripts.cmake
Coding/cpp/project1/include/: mylib.h
Coding/cpp/project1/scripts/: build.sh  generate_version.sh
Coding/cpp/project1/src/: main.cpp  mylib.cpp
DistributeTraining/: megatron-training-demo1.ipynb
LLM/Transformers/: transformer.py
SFT/: deepseek-sft.ipynb  deepseek-sft.py
generative_recommendation/OneRec/: LogitProcessor.py  README.md  data.py  data_test.py  eval_arts.sh  evaluate.py  minionerec_trainer.py  rl.py  rl_arts.sh  run_mini_onerec_demo.ipynb  sft.py  sft_arts.sh
generative_recommendation/OneRec/results/Qwen2.5-0.5B/: final_result_Arts.json
generative_recommendation/OneRec/rq/text2emb/: amazon_text2emb.py
generative_recommendation/OneRec/temp/Arts-Qwen2.5-0.5B/: 2.csv  5.csv  7.csv
generative_recommendation/OneRec/temp/Arts-arts_data_set/: 0.csv  1.csv  3.csv  4.csv  6.csv
generative_recommendation/OneRec/wandb/: latest-run
generative_recommendation/OneRec/wandb/offline-run-20260316_225443-1sn3l8aj/files/: requirements.txt
generative_recommendation/OneRec/wandb/offline-run-20260316_225837-2whikxde/: run-2whikxde.wandb
